<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="6dp"
    android:background="@color/category_album"
    android:orientation="vertical"
    android:padding="12dp">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/cover_image_view"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/album"
            android:scaleType="centerInside"
            android:contentDescription="@string/album_cover" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_weight="0.7"
            android:orientation="vertical"
            android:paddingLeft="8dp"
            android:paddingStart="8dp">

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#304FFE"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:text="Album Name" />

            <TextView
                android:id="@+id/band_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                tools:text="Band Name" />

            <TextView
                android:id="@+id/year_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#000000"
                android:textSize="12sp"
                tools:text="1988" />

        </LinearLayout>

        <Button
            android:id="@+id/artist_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:background="@drawable/artists"
            android:scaleType="centerInside"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:contentDescription="@string/album_artists"/>

        <Button
            android:id="@+id/song_btn"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="center"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/tracks"
            android:scaleType="centerInside"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:contentDescription="@string/album_songs"/>

    </LinearLayout>

</LinearLayout>